# MPicker

./: CMakeLists.txt  CNAME  README.md  index.html
images/: images.qrc
installer/: .gitignore
installer/config/: config.xml
js/: main.js
src/: CMakeLists.txt  main.cpp  pickermanager.cpp  pickermanager.h  screencover.cpp  screencover.h  shortcutwidget.cpp  shortcutwidget.h  trayicon.cpp  trayicon.h  utils.cpp  utils.h  welcomewidget.cpp  welcomewidget.h
style/: main.css
